# mixed-customer-response

./: .gitignore  README.md  main.py  pyproject.toml  run_as_module.py
mcr/: main.py  pyproject.toml  setup.py
mcr/src/mcr/: __init__.py
mcr/src/mcr/avinfra_persuasion/: MOSP_NOTICE.md  __init__.py  datastructures.py  game.py  mosp.py  opt.py  order_of_priority.py  orders.py  plotting.py  routing_solvers.py  toy_preference_evaluation.py  toy_preference_evaluation_mosp.py  toy_setup.py
mcr/src/mcr/avinfra_persuasion/bp/: game.py  receivers.py  senders.py  signals.py
mcr/src/mcr/avinfra_persuasion/experiments/: experiment_0.py  experiment_1.py  experiment_1_0.py  experiment_1_1.py  experiment_2.py  experiment_2_0.py  experiment_2_1.py  experiment_2_2.py  experiment_2_3.py  experiment_3_0.py  experiment_4_0.py  experiment_5_0.py  helpers.py  plan_experiment_3.md  plot_game.py  plotting.py
mcr/src/mcr/avinfra_persuasion/networks/: toy_0.py  toy_1.py  toy_2.py  (+1 more)
mcr/src/mcr/simple_persuasion/: __init__.py  basic_bayesian_persuasion.py  generic_market_env.py
mcr/src/mcr/simple_posetal_persuasion/: game.py
mcr/src/mcr/simple_routing/: base_env.py  opt_env.py
mcr/tests/avinfra_persuasion/: test_datastructures.py  test_experiment_0.py  test_experiment_1.py  test_experiment_2_0.py  test_experiment_2_1.py  test_experiment_2_2.py  test_experiment_3_0.py  test_experiment_4_0.py  test_mosp_wrapper.py  test_receivers.py  test_routing_solvers.py  test_senders.py  test_signals.py  test_typed_state_dependent_game.py
mcr/tests/orders/: test_framework.py  test_orders.py
(+27 files in other folders)
