[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel",
    "Cython>=3.2.4",
    "numpy>=2.4.3",
]
build-backend = "setuptools.build_meta"

[project]
name = "mcr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "benpy",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcr.avinfra_persuasion" = ["MOSP_NOTICE.md"]
